add pages and components

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/*nav */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.nav-container{
+  position: absolute;
+  top:30px;
+  left: 100px;
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  flex-direction: row;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  gap: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-link-container ul{
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-link-container a{
+  font-size: 20px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  color:white;
+
 }
+
+.main-container{
+  height: 100vh;
+  background-image: url('./img/main_background.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+
