--- a/src/App.css
+++ b/src/App.css
@@ -24,14 +24,22 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
+  border-bottom:2px solid white;
 }
 
 .nav-link-container a{
-  font-size: 20px;
+  font-size: 1.2rem;
   letter-spacing: 2px;
   text-decoration: none;
   color:white;
+  transition: 1s ease;
 
+}
+
+.nav-link-container a:hover{
+  font-size: 1.3rem;
+  letter-spacing: 2.5px;
+  color:aquamarine;
 }
 
 .nav-logo-container{
