--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+:root{
+  --main-color:rgb(63, 159, 207);
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -37,9 +41,7 @@
 }
 
 .nav-link-container a:hover{
-  font-size: 1.3rem;
-  letter-spacing: 2.5px;
-  color:aquamarine;
+  color:var(--main-color);
 }
 
 .nav-logo-container{
@@ -57,6 +59,70 @@
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
+}
+
+.main-info{
+  position: absolute;
+  top:50%;
+  left: 50%;
+  transform: translate(-50%,-70%);
+  color:white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.3rem;
+}
+
+.main-info button{
+  background-color: rgba(0, 0, 0, 0.127);
+  color:white;
+  font-size: 1.2rem;
+  border: 2px solid white;
+  border-radius: 10px;
+  padding: 10px;
+  transition: 1s ease;
+
+}
+
+.main-info button:hover{
+  background-color: rgba(255, 255, 255, 0.314);
+  color:black;
+}
+
+.header-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+
+.header-container h1{
+  margin-bottom: 50px;
+}
+
+.header-info{
+  width: 100vw;
+  height: 100vh;
+  background-image: url('./img/header_background.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: grayscale(1.8);
+  filter: contrast(1.2);
+  
+}
+
+.header-text{
+  position: relative;
+  top:20%;
+  left:10%;
+}
+
+.header-text h1{
+  font-size: 2.56rem;
+  font-weight: 700;
+  color:white;
 }
 
 
