--- a/src/App.css
+++ b/src/App.css
@@ -113,11 +113,20 @@
   
 }
 
+.header-info-back{
+  background-color: rgba(0, 0, 0, 0.508);
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+
 .header-text{
   position: relative;
-  top:20%;
-  left:10%;
+  top:50%;
+  left: 30%;
 }
+
+
 
 .header-text h1{
   font-size: 2.56rem;
