--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root{
   --main-color:rgb(63, 159, 207);
+  --second-color:#0074e8;
 }
 
 *{
@@ -122,17 +123,53 @@
 
 .header-text{
   position: relative;
-  top:50%;
+  top:30%;
   left: 10%;
-  width: 20%;
+  width: 40%;
+  color: white;
 }
 
+.header-text h1{
+  font-size: 1.4rem;
+  text-transform: uppercase;
+}
+
+
+
+.header-text-link a{
+  text-transform: uppercase;
+  text-decoration: none;
+  color:white;
+  margin: 20px 20px;
+  transition: 0.5s ease;
+
+}
+
+.header-text-link a:hover{
+  border-bottom: 3px solid blue;
+}
 
 
 .header-text h1{
   font-size: 2.56rem;
   font-weight: 700;
   color:white;
+  margin-bottom: 20px;
+}
+
+.header-text button{
+  margin: 10px;
+  padding: 10px;
+  background-color:var(--second-color);
+  color:white;
+  width: 70%;
+  transition: 0.8s ease;
+  border-color: var(--second-color);
+}
+
+.header-text button:hover{
+  background-color: black;
+  
 }
 
 
