--- a/src/App.css
+++ b/src/App.css
@@ -132,11 +132,13 @@
   left: 10%;
   width: 40%;
   color: white;
+  
 }
 
 .header-text h1{
   font-size: 1.4rem;
   text-transform: uppercase;
+  text-align: left;
 }
 
 
@@ -192,6 +194,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
+  margin-bottom: 50px;
 }
 
 .offer-cards{
@@ -214,6 +217,7 @@
 .offer-one-card img{
   width: 100%;
   object-fit: contain;
+  margin-bottom: 50px;
 }
 
 
