--- a/src/App.css
+++ b/src/App.css
@@ -237,10 +237,43 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 50px;
 }
 
 .import-header p{
   color: var(--p-color);
+}
+
+
+.import-cards{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+
+}
+
+.import-card{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+  overflow: hidden;
+  text-align: center;
+}
+
+.import-card h2{
+  margin: 10px;
+}
+
+.import-card p{
+  margin: 20px;
+}
+
+.import-card img{
+  width: 100%;
+  height: 300px;
+  object-fit: contain;
 }
 
 
