add pages and components

--- a/src/App.css
+++ b/src/App.css
@@ -69,8 +69,8 @@
 }
 
 .brand-one{
-  width: 200px;
-  height: 200px;
+  width: 150px;
+  height: 150px;
   margin: 20px;
   
 }
@@ -83,6 +83,7 @@
 }
 
 .brand-one img:hover{
+  transform: scale(1.1);
   filter: grayscale(0);
 }
 
