--- a/src/App.css
+++ b/src/App.css
@@ -110,6 +110,8 @@
 }
 
 .main-info button{
+  width: 150px;
+  margin-top: 30px;
   background-color: rgba(0, 0, 0, 0.127);
   color:white;
   font-size: 1.2rem;
@@ -156,6 +158,12 @@
   position: relative;
   width: 100%;
   height: 100%;
+}
+
+.header-info-back img{
+  position: absolute;
+  top:200px;
+  right: 2%;
 }
 
 .header-text{
