--- a/src/App.css
+++ b/src/App.css
@@ -276,7 +276,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .import-header p{
@@ -287,7 +287,7 @@
 .import-cards{
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
 
 }
 
@@ -306,13 +306,13 @@
 }
 
 .import-card p{
-  margin: 20px;
+  margin: 10px;
 }
 
 .import-card img{
   width: 100%;
-  height: 300px;
-  object-fit: contain;
+  height: 60%;
+  /* object-fit: contain; */
 }
 
 
