--- a/src/App.css
+++ b/src/App.css
@@ -255,19 +255,26 @@ html{
   align-items: center;
   text-align: center;
   width: 30%;
-  padding: 30px;
-  background-color: black;
+  padding-bottom: 30px;
+  background-color: #0e223d;
   color:var(--second-color);
   border-radius: 20px;
+  filter: grayscale(1);
+  transition: 1s ease;
   
   
 }
 
+.offer-one-card:hover{
+  filter: grayscale(0);
+  transform: scale(1.1);
+}
+
 .offer-one-card img{
-  width: 300px;
+  width: 100%;
   height: 260px;
   object-fit: cover;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   border-radius: 10px;
 
 }
