--- a/src/App.css
+++ b/src/App.css
@@ -383,11 +383,24 @@ html{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: center;
+  margin-top: 50px;
   
 }
 
 .oleje-card-one{
-  
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 28vw;
+  margin: 20px;
+}
+
+.oleje-card-one img{
+  width: 100%;
+  height: 300px;
+  object-fit: contain;
 }
 
 
