--- a/src/App.css
+++ b/src/App.css
@@ -404,6 +404,57 @@ html{
 }
 
 
+@media screen and (max-width: 600px) {
+  .App{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .nav-container{
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    position:static;
+    top: auto;
+    left: auto;
+    height: auto;
+  }
+
+  .nav-link-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .nav-logo-container{
+    display: flex;
+    justify-content: center;
+    width: auto;
+  }
+
+  .nav-link-container ul{
+    display: flex;
+    flex-direction: column;
+  }
+
+
+  .main-container{
+    position: relative;
+  }
+
+  .main-info{
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    text-align: center;
+    }
+
+  }
+
+
 
 
 
